# example

./: BUILD.bazel  README.md  WORKSPACE  go.mod  hello.go
stringutil/: BUILD.bazel  reverse.go
