load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["reverse_test.go"],
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["reverse.go"],
    importpath = "github.com/example/stringutil",
    visibility = ["//visibility:public"],
)
